Animations updated; margin reduced to prevent page overflow.

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mooli&family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mooli&family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 #root {
   margin: 0 auto;
@@ -7,7 +7,7 @@
 }
 
 * {
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
   margin: 0;
   padding: 0;
   user-select: none;
