--- a/src/index.css
+++ b/src/index.css
@@ -7,17 +7,19 @@
   color: rgba(255, 255, 255, 0.87);
   background: rgb(1, 25, 22);
   background: linear-gradient(
-    180deg,
-    rgba(1, 25, 22, 1) 0%,
-    rgba(1, 59, 50, 1) 72%,
-    rgba(159, 65, 0, 1) 100%
-  ) fixed;
+      180deg,
+      rgba(1, 25, 22, 1) 0%,
+      rgba(1, 59, 50, 1) 72%,
+      rgba(159, 65, 0, 1) 100%
+    )
+    fixed;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  width: 100%;
 }
 
 a {
@@ -51,4 +53,3 @@ a:hover {
     background-position: 0% 50%;
   }
 }
-
